// SonarQube, open source software quality management tool.
// Copyright (C) 2008-2016 SonarSource
// mailto:contact AT sonarsource DOT com
//
// SonarQube is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either
// version 3 of the License, or (at your option) any later version.
//
// SonarQube is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
// Lesser General Public License for more details.
//
// You should have received a copy of the GNU Lesser General Public License
// along with this program; if not, write to the Free Software Foundation,
// Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

syntax = "proto2";

package sonarqube.ws.projectanalysis;

import "ws-commons.proto";

option java_package = "org.sonarqube.ws";
option java_outer_classname = "ProjectAnalyses";
option optimize_for = SPEED;

// WS api/project_analyses/create_event
message CreateEventResponse {
  optional Event event = 1;
}

// WS api/project_analyses/update_event
message UpdateEventResponse {
  optional Event event = 1;
}

// WS api/project_analyses/search
message SearchResponse {
  optional sonarqube.ws.commons.Paging paging = 1;
  repeated Analysis analyses = 2;
}

message Event {
  optional string key = 1;
  optional string analysis = 2;
  optional string category = 3;
  optional string name = 4;
  optional string description = 5;
  optional QualityGate qualityGate = 6;
  optional DefinitionChange definitionChange = 7;
  optional QualityProfile qualityProfile = 8;
}

message Analysis {
  optional string key = 1;
  optional string date = 2;
  repeated Event events = 3;
  optional string projectVersion = 4;
  optional string buildString = 5;
  optional bool manualNewCodePeriodBaseline = 6;
  optional string revision = 7;
  optional string detectedCI = 8;
}

message QualityGate {
  optional string status = 1;
  optional bool stillFailing = 2;
  repeated Failing failing = 3;
}

message QualityProfile {
  optional string key = 1;
  optional string name = 2;
  optional string languageKey = 3;
}

message Failing {
  optional string key = 1;
  optional string name = 2;
  optional string branch = 3;
}

message DefinitionChange {
  repeated Project projects = 1;
}

message Project {
  optional string changeType = 1;
  optional string key = 2;
  optional string name = 3;
  optional string branch = 4;
  optional string oldBranch = 5;
  optional string newBranch = 6;
}

